# dmr

./: Makefile  README.md
dmplay/: Makefile  config.mak
dmplay/include/: audio.h  codec.h  common.h  debug.h
dmplay/lib/: Makefile
dmplay/lib/faad2-2.7/: config.h.in  configure
dmplay/lib/ffmpeg-0.7.16/: configure
dmplay/lib/libogg-1.3.2/: Makefile.am  missing
dmplay/lib/tremor/: Makefile.in  configure
dmplay/src/: Makefile  audio.c  codec.c  common.c  debug.c  dmplay.c
dmplay/src/codec/: ffmpeg.c
dmplay/src/output/: i2s.c
mrender/: Makefile
mrender/gmediarender/: Makefile  config.status
mrender/gmediarender/data/: Makefile
mrender/gmediarender/src/: Makefile  Makefile.am  Makefile.in  debug.c  debug.h  logging.h  main.c  output_gstreamer.c  output_gstreamer.h  rlog.c  rlog.h  upnp.c  upnp.h  upnp_connmgr.c  upnp_control.c  upnp_control.h  upnp_device.c  upnp_device.h  upnp_renderer.c  upnp_transport.c  upnp_transport.h  uuid.c  uuid.h  webserver.c  xmlescape.c
mrender/gmediarender/src/.deps/: debug.Po  main.Po  output_gstreamer.Po  rlog.Po  upnp.Po  upnp_connmgr.Po  upnp_control.Po  upnp_device.Po  upnp_renderer.Po  upnp_transport.Po  uuid.Po  webserver.Po  xmlescape.Po
mrender/libupnp-1.6.17/: Makefile  Makefile.in  config.status  configure  libtool  libupnp.pc
mrender/libupnp-1.6.17/autom4te.cache/: output.0  traces.0
mrender/libupnp-1.6.17/ixml/: Makefile  Makefile.in
mrender/libupnp-1.6.17/threadutil/: Makefile  (+1 more)
mrender/libupnp-1.6.19/: Makefile  autoconfig.h  autoconfig.h.in  config.status  configure  libtool  libupnp.pc
(+162 files in other folders)
